--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.7"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc01"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
